--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/react-motion.js",
   "module": "lib/react-motion.esm.js",
   "peerDependencies": {
-    "react": "^0.14.9 || ^15.3.0 || ^16.0.0"
+    "react": "^0.14.9 || ^15.3.0 || ^16.0.0 || ^17.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-rc.1",
@@ -23,7 +23,7 @@
     "codemirror": "^5.5.0",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
-    "eslint": "^5.16.0",
+    "eslint": "^4.x.x",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-loader": "^2.0.0",
